<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    tools:context=".screens.SplashScreen"
    android:padding="30dp" >
    <RelativeLayout
        android:id="@+id/splash_rel_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/blue_background" >
        
	    <ImageView
	        android:id="@+id/splash_img_logo"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:contentDescription="@string/logo_copyright"
	        android:src="@drawable/icon" />
	
	    <TextView
	        android:id="@+id/splash_tv_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/splash_img_logo"
	        android:layout_centerHorizontal="true"
	        android:text="@string/app_name"
	        android:textColor="@color/white"
	        android:textSize="30sp"/>
	    
	</RelativeLayout>

    <TextView
        android:id="@+id/splash_tv_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/loading" />

</RelativeLayout>